# dotfiles-manager

./: .zshrc  LICENSE  README.md  dede.txt  dotfiles.py  pyproject.toml  settings.json
.github/workflows/: python-package.yml  tests.yml
commands/: backup.py  base.py  config.py  copy.py  file.py  help.py  init.py  link.py  pip.py  profil.py  script.py  use.py
commands/extras/: dconf.py  git.py  sh.py
commands/file/: copy.py  file.py
commands/fs/: link.py
dotfiles_manager/: __init__.py  __main__.py  cli.py
dotfiles_manager/commands/: base.py  copy.py  create.py  extra.py  help.py  init.py  profil.py  runner.py  script.py  symlink.py
dotfiles_manager/commands/extras/: dconf.py
dotfiles_manager/commands/file/: copy.py  file.py  link.py
dotfiles_manager/utils/: commands.py  config.py  encoder.py  exception.py  format.py  logger.py  shell.py  style.py  template.py  utils.py
dotfiles_manager/utils/fs/: base.py  condition.py  flags.py  fs.py  log.py  path.py  shell.py  utils.py
tests/: data.json
tests/data/link/home/__dotfiles__/: .dotfilerc.json
tests/data/system/etc/: environment
tests/data/user/: .hyper.js
utils/: commands.py  conf.py  config.py  encoder.py  expection.py  logger.py  shell.py  utils.py
v1/commands/: base.py  copy.py  flatpak.py  npm.py  packages.py  update.py
v1/commands/extras/: __init__.py  base.py  docker.py
v1/config/: system.sh
v1/copy/: package.json
v1/utils/: utils.py
