[project]
name = "manager-dotfiles"
version = "0.0.1"
description = "dotfiles link/copy manager"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "jinja2>=3.1.6",
]

[project.scripts]
dotfiles-manager = "dotfiles_manager:cli"
dm = "dotfiles_manager:cli"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.uv]
package = true
